# vdfr

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: main.rs
vdfr/: Cargo.toml
vdfr/src/: common.rs  legacy_parser.rs  lib.rs  parser.rs  writer.rs
vdfr/tests/: main.rs  test_writer.rs
vdfr/tests/input/: widestring.vdf
vdfr/tests/output/: widestring.json
