[package]
name = "vdf"
description = "A tool for interrogating files that use Valve's binary VDF format."
version.workspace = true
edition.workspace = true

[dependencies]
vdfr = { path = "../vdfr", features = ["legacy", "writer"] }
clap = { version = "4.5.27", features = ["derive"] }

rand = "0.9.0"
