[package]
name = "vdfr"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = { version = "1.5.0", optional = true }
nom = "7.1.3"

serde = { version = "1.0.204", features = ["derive"], optional = true}
serde_json = { version = "1.0.120", optional = true }

# Todo: Use this to verify signature?
sha1_smol = "1.0.1"

[features]
default = ["serde"]
legacy = ["dep:byteorder"]
serde = ["dep:serde", "dep:serde_json"]
