[package]
name = "vdfr"
description = "A tool for interpreting files that use Valve's binary VDF format."
version.workspace = true
edition.workspace = true

[dependencies]
byteorder = { version = "1.5.0", optional = true }
nom = "8.0.0"

serde = { version = "1.0.217", features = ["derive"], optional = true}
serde_json = { version = "1.0.137", optional = true }

# Todo: Use this to verify signature?
sha1_smol = { version = "1.0.1", optional = true }

[dev-dependencies]
vdfr = { path = ".", features = ["serde", "writer"] }

[features]
default = ["serde"]
legacy = ["dep:byteorder"]
serde = ["dep:serde", "dep:serde_json"]
writer = ["dep:sha1_smol"]
